added command git init

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Welcome!</h1>
     <p>We will learn how to use Version Control System (<strong>VCS</strong>). I will be using <strong>Git</strong> for this tutorial.</p>
-    <br>
+    <hr>
     <h3>Who should use Git?</h3>
     <p>You do not have to be a programmer to use Git. Anyone who works on projects and wants to maintain its different 
        versions, can use <br> 
@@ -34,7 +34,7 @@
        you mantain different versions locally in your machine.<br>
        Github is basically a cloud storage platform where you can store your files in repositries. You can access them 
        from anywhere in the world and from any machine in the world.</p>
-    
+    <hr>
     <h4>Installation Guide:</h3>
     <h4>Github for Windows:</h4>
     <a href="https://windows.github.com" target="_blank">https://windows.github.com</a>
@@ -46,6 +46,16 @@
        <p>You will see the following result if the installation was successfull. Note: Your version might be different.</p> 
     </p>
     <img src="images/version.png">
+    <hr>
+    <p>Now that we have installed git, lets move towards learnin how to use it.</p>
+    <h3>git init</h3>
+    <p>Open the folder that contains the files, you want to manage different versions of, inside the terminal and type
+       <br> <strong>git init</strong><br>
+        Executing this command will initialize that folder as a Git repository.
+        <br>
+    </p>
+    <img src="images/init1.png">
+    <img src="images/init2.png">
 
 </body>
 </html>
