added command git status

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <img src="images/version.png">
     <hr>
     <p>Now that we have installed git, lets move towards learnin how to use it.</p>
+    <hr>
     <h3>git init</h3>
     <p>Open the folder that contains the files, you want to manage different versions of, inside the terminal and type
        <br> <strong>git init</strong><br>
@@ -56,6 +57,36 @@
     </p>
     <img src="images/init1.png">
     <img src="images/init2.png">
-
+   <hr>
+   <p>Now, suppose you are inside the repository. What will be the process? <br>
+      Have a look at the image below
+      <ul>
+         <li>Your working directory is the area where you will be working on the files.</li>
+         <li>Then you will add this file into staging area. Here it keeps track of the changes being made.</li>
+         <li>Then you will commit it and it's version will be stored in the local repository.</li>
+      </ul>
+   </p>
+   <img src="images/generalConcept.png">
+   <hr>
+   <h3>git status</h3>
+   <p>This command shows the files that are being tracked and that are not being tracked. <br>
+      For the files that are being tracked it also shows if any chnages have been made to them that are not 
+      yet saved in the local repository.</p>
+   <img src="images/status.png">
+   <hr>
+   <h3>git add</h3>
+   <p>Files can be added in the staging area using two ways
+      <ul>
+         <li>Add a single file</li>
+         <li>Add all files at once</li>
+      </ul>
+      <br> <strong>git add [file name]</strong><br>
+      adds the single file into staging area. 
+      <br>
+   </p>
+   <img src="">
+   <img src="">
+   <hr>
+   
 </body>
 </html>
