added command git add and git commit

--- a/index.html
+++ b/index.html
@@ -81,12 +81,28 @@
          <li>Add all files at once</li>
       </ul>
       <br> <strong>git add [file name]</strong><br>
-      adds the single file into staging area. 
+      adds the single file into staging area.
       <br>
    </p>
-   <img src="">
-   <img src="">
-   <hr>
+   <img src="images/add1.png">
+   <p>
+      <br> <strong>git add .</strong><br>
+      adds all the files and subdirectories in current directory to staging area. 
+      <br></p>
+      <img src="images/add2.png">
+   <p>Now both files are being tracked <br>
+      Lets make some changes in the files</p>
+   <img src="images/change1.png">
+   <img src="images/change2.png">
+
+   <h3>git commit</h3>
+   <p>This command will move all the files in the staging area to local repository. It means it will store the current 
+      version.
+      <br> <strong>git commit -m message</strong><br>
+      Message is a note which will help you remember what change you made in this commit.
+      <br>
+   </p>
+   <img src="images/spring.png">
    
 </body>
 </html>
