made changes to the files, commited them and added snapshots

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
    <p>Now both files are being tracked <br>
       Lets make some changes in the files</p>
    <img src="images/change1.png">
-   <img src="images/change2.png">
+   <img src="images/change1Commit.png">
 
    <h3>git commit</h3>
    <p>This command will move all the files in the staging area to local repository. It means it will store the current 
@@ -103,6 +103,14 @@
       <br>
    </p>
    <img src="images/spring.png">
+   <p>Lets make some changes and commit them.</p>
+   <img src="images/change2.png">
+   <br>
+   <img src="images/change2Commit.png">
+   <br>
+   <img src="images/change3.png">
+   <br>
+   <img src="images/change3Commit.png">
    
 </body>
 </html>
