added command git log

--- a/index.html
+++ b/index.html
@@ -110,7 +110,12 @@
    <br>
    <img src="images/change3.png">
    <br>
-   <img src="images/change3Commit.png">
-   
+   <img src="images/change3Commit.png">   
+<hr>
+<h3>git log</h3>
+<p>This command shows the track of commit. It shows when the commit was made, who made the commit and commit message. 
+   <br>
+   <img src="images/log.png">   
+</p>
 </body>
 </html>
