added the command for moving to previous any commit and to move back to branch master

--- a/index.html
+++ b/index.html
@@ -117,5 +117,18 @@
    <br>
    <img src="images/log.png">   
 </p>
+
+<p>Let say we want se how our directory looked at first commit.
+    <br>
+   For this we would have to copy the hash code of the commit and type
+   <br><Strong>git checkout "commit hash code" </Strong>
+   </p>
+   <img src="images/checkout1.png">   
+   <img src="images/checkout2.png">   
+   <p>To swicth back to recent state, type
+   <br><Strong>git checkout master </Strong>
+   </p>
+   <img src="images/switchBack1.png">   
+   <img src="images/switchback2.png">   
 </body>
 </html>
