--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Welcome!</h1>
@@ -130,5 +132,44 @@
    </p>
    <img src="images/switchBack1.png">   
    <img src="images/switchback2.png">   
+
+   <hr>
+   <h3>Lets learn about branches now. What are branches?</h3>
+   <p>Branches enables you to make changes in the project without affecting the existing
+      project. Sometimes you make some changes and those chnages create turbulence in the project. So, your prject becomes 
+      unstable. The only way now is to revert back but how can we do that. We will have to remember how it looked like back 
+      then. Git branches makes it way more easier for you.
+      Master branch is the main branch. Whenever you want to make changes to your project that might make it unstable, create
+      a branch. It copy all the files in that branch. So basically it generated a copy of the project. You can make changes
+      in it. Whenever you think that the changes are sable you can merge the both branches otherwise you can simply switch 
+      to previous branch.
+   </p>
+   <img src="images/branch.png"> 
+   <h3>git branch</h3>
+   <p>It tells you which branch you are on. </p>
+   <br>
+   <img src="images/branch1.png">  
+   
+   <h3>git branch [branch-name]</h3>
+   <p>It will create a new branch with the specified name.</p>
+      <br>
+      <img src="images/branch2.png"> 
+
+   <h3>git checkout [branch-name]</h3>
+   <p>Switches to the branch specified.</p>
+      <br>
+      <img src="images/branch3.png"> 
+         
+
+   <hr>
+   <h2>GitHub</h2>
+   <p>Now, that we have leanred git lets move on to GitHub. 
+      <br>
+      GitHub is a cloud storag platform, where you can store your repositries and can access them from anywhere.
+      <br>
+      <a href="https://github.com/">github.com</a>
+      <br>
+      Open the above link and create your account on GitHub.
+   </p>
 </body>
 </html>
