added procedure of creating repository on GitHub and uploading a local repository

--- a/index.html
+++ b/index.html
@@ -169,7 +169,35 @@
       <br>
       <a href="https://github.com/">github.com</a>
       <br>
-      Open the above link and create your account on GitHub.
+      Open the above link and create your account on GitHub. <br>
+      Click on new for creating a new repository.
+      <img src="images/githubRepo1.png">
+      <br>
+      Enter the name and description and click create repository.
+      <img src="images/githubRepo2.png">
+      <br>
+      Follow these instructions to upload your local repository to GitHub.
    </p>
+   <img src="images/githubRepo3.png" >
+   <br><br>
+   <img src="images/githubRepo4.png" >
+   <br><br>
+   <img src="images/githubRepo5.png" >
+   <br>
+   <p>You can see that our repository is uploaded.</p>
+   <br>
+   <img src="images/githubRepo6.png" >
+   <br>
+   <p>You can also view commits.</p><br>
+   <img src="images/githubRepo7.png" >
+   <h3>How to download an existing GitHub repoitory on you local machine?</h3>
+   <p>
+      <ul>
+         <li>Move to the directory you want to clone the repository in.</li>
+         <li>Open Terminal and Enter following commands</li>
+         <li>git init</li>
+         <li>git clone [url of repository]</li>
+      </ul>
+</p>
 </body>
 </html>
