added procedure of cloning a GitHub Repository

--- a/index.html
+++ b/index.html
@@ -198,6 +198,11 @@
          <li>git init</li>
          <li>git clone [url of repository]</li>
       </ul>
-</p>
+   </p>
+   <img src="images/clone1.png" >
+   <br><br>
+   <img src="images/clone2.png" >
+   <br><br>
+   <img src="images/clone3.png" >
 </body>
 </html>
