added precedure of git pull

--- a/index.html
+++ b/index.html
@@ -204,5 +204,19 @@
    <img src="images/clone2.png" >
    <br><br>
    <img src="images/clone3.png" >
+   <hr>
+   <p>Suppose I or someone make changes in repsoitory on GitHub. How will my local repository gets updated?</p>
+   <h3>git pull</h3>
+   <p>It will update the local repsoitory.</p>
+   <br><br>
+   <img src="images/pull1.png" >
+   <br><br>
+   <img src="images/pull2.png" >
+   <br><br>
+   <img src="images/pull3.png" >
+   <br><br>
+   <img src="images/pull4.png" >
+   <br><br>
+   <img src="images/pull5.png" >
 </body>
 </html>
