resolved issue of image gitHubRepo4

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
          <img src="images/githubRepo3.png" class="img">
          <br><br>
-         <img src="images/githubRepo4.png" class="img">
+         <img src="images/gitHubRepo4.png" class="img">
          <br><br>
          <img src="images/githubRepo5.png" class="img">
          <br>
